--- a/css/style.css
+++ b/css/style.css
@@ -3,15 +3,15 @@ html, body{
     /* width:100%; */
 }
 body {
-    background-color: black; 
+    background-color: dimgray; 
     padding: 0; 
-    margin: 0; 
+    margin: 2%; 
     display:flex;
      /* This centers our sketch horizontally. */
-    justify-content: center;
+    /* justify-content: center; */
 
     /* This centers our sketch vertically. */
-    align-items: center;
+    /* align-items: center; */
 }
 #canvas {
     display: flex;
@@ -27,6 +27,6 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: grey;
+    background-color: lightgray;
     padding:20px;
 }
