corrected an issue where the screen scrolls when the spacebar is pressed

--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,11 @@ body {
     padding: 0; 
     margin: 2%; 
     display:flex;
+    vertical-align: top;
      /* This centers our sketch horizontally. */
-    /* justify-content: center; */
-
-    /* This centers our sketch vertically. */
-    /* align-items: center; */
+    justify-content: center;
+    /*prevents the screen from scrolling*/
+    overflow-y: hidden;
 }
 #canvas {
     display: flex;
@@ -21,12 +21,25 @@ body {
     margin-top: 20px;
     margin-bottom: 20px;
 }
-
-#instructions{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.showInstructions {
+    position:relative;
+    left:-508px;
+    padding:5px;
+    margin:2px;
+    display: inline-block;
+    border-radius: 5px;
+    background-color: lightgreen;
+}
+.showInstructions:hover + .instructions{
+    display: inline-block;
+    background-color: grey;
+    padding:20px;
+}
+.instructions{
+    position: absolute;
+    display: none;
+    top: 18%;
+    left: 10%;
     background-color: lightgray;
     padding:20px;
 }
