--- a/css/style.css
+++ b/css/style.css
@@ -38,8 +38,8 @@ body {
 .instructions{
     position: absolute;
     display: none;
-    top: 18%;
-    left: 10%;
+    /* top: 18%;
+    left: 10%; */
     background-color: lightgray;
     padding:20px;
 }
