--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,20 @@ body {
     margin-top: 20px;
     margin-bottom: 20px;
 }
+#myButton {
+    position:relative;
+    top:60px;
+    left: -350px;
+    padding:20px;
+    border-radius: 15px;
+    /* height:50px; */
+}
+#myButton:hover {
+    background-color: greenyellow;
+}
+#myButton:active{
+    background-color: darkgreen;
+}
 .showInstructions {
     position:relative;
     left:-508px;
